# ExposomeDB

./: .dockerignore  .gitignore  2-5-23.txt  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  errors.py  flake.nix  initialize_db.py  pyproject.toml  setup.sh  validate.py
.github/workflows/: build.yml
migrations/versions/: 1a0a82192181_.py  282564545160_changed_user_schema.py  6249fce1ead9_.py  70947667e6b3_.py  7e9528cf1416_first_migration.py
static/: search.txt  upload.txt
templates/: account_edit.html  account_view.html  admin.html  base.html  batchadd.html  batchquery.html  create_chemical.html  delete_chemical.html  index.html  login.html  register.html  search.html  user.html  view_chemical.html
templates/errors/: 403.html  404.html
