[tool.poetry]
name = "flask-sample"
version = "0.1.0"
description = ""
authors = ["junikimm717 <68165832+junikimm717@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask-sqlalchemy = "^3.0.2"
Flask = "^2.2.2"
py-bcrypt = "^0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
types-Flask-SQLAlchemy = "^2.5.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
